build_output.txt
[  2%] Building CXX object CMakeFiles/PedalForge.dir/source/CustomStandaloneApp.cpp.o
/Users/joshua/Developer/PedalForge/source/CustomStandaloneApp.cpp:59:44: error: only virtual member functions can be marked 'override'
   59 |     StandaloneFilterWindow* createWindow() override
      |                                            ^~~~~~~~
/Users/joshua/Developer/PedalForge/source/CustomStandaloneApp.cpp:155:28: warning: no previous prototype for function 'juce_CreateApplication' [-Wmissing-prototypes]
  155 | juce::JUCEApplicationBase* juce_CreateApplication()
      |                            ^
/Users/joshua/Developer/PedalForge/source/CustomStandaloneApp.cpp:155:1: note: declare 'static' if the function is not intended to be used outside of this translation unit
  155 | juce::JUCEApplicationBase* juce_CreateApplication()
      | ^
      | static 
1 warning and 1 error generated.
make[3]: *** [CMakeFiles/PedalForge.dir/source/CustomStandaloneApp.cpp.o] Error 1
make[2]: *** [CMakeFiles/PedalForge.dir/all] Error 2
make[1]: *** [CMakeFiles/PedalForge_Standalone.dir/rule] Error 2
make: *** [PedalForge_Standalone] Error 2
